{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 343,
  "lineage": "3b8435fb-a4cd-3f9e-4e74-8459f56b489a",
  "resources": [
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_eip",
      "name": "aft-vpc-natgw-01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a8d89dd3406f6a5",
            "domain": "vpc",
            "id": "eipalloc-00a8d89dd3406f6a5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-159-216-223.compute-1.amazonaws.com",
            "public_ip": "54.159.216.223",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aft.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_eip",
      "name": "aft-vpc-natgw-02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce0982c891ecb4fb",
            "domain": "vpc",
            "id": "eipalloc-0ce0982c891ecb4fb",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-193-140-179.compute-1.amazonaws.com",
            "public_ip": "44.193.140.179",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aft.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aft-vpc-igw",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:internet-gateway/igw-02f71d73a78ae48d9",
            "id": "igw-02f71d73a78ae48d9",
            "owner_id": "831569350010",
            "tags": {
              "Name": "aft-vpc-igw"
            },
            "tags_all": {
              "Name": "aft-vpc-igw",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aft-vpc-natgw-01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a8d89dd3406f6a5",
            "association_id": "eipassoc-00cc9a30129c8e826",
            "connectivity_type": "public",
            "id": "nat-01641fb40e6fc2ff3",
            "network_interface_id": "eni-031102927b777c8cd",
            "private_ip": "192.168.2.123",
            "public_ip": "54.159.216.223",
            "subnet_id": "subnet-09ad9123c874f2007",
            "tags": {
              "Name": "aft-vpc-natgw-01"
            },
            "tags_all": {
              "Name": "aft-vpc-natgw-01",
              "managed_by": "AFT"
            }
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aft-vpc-natgw-02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce0982c891ecb4fb",
            "association_id": "eipassoc-03beff7d99e0ed660",
            "connectivity_type": "public",
            "id": "nat-05ab4e935ebebc8b6",
            "network_interface_id": "eni-0378cea8d220dcf98",
            "private_ip": "192.168.2.213",
            "public_ip": "44.193.140.179",
            "subnet_id": "subnet-01ce66e9a82e30592",
            "tags": {
              "Name": "aft-vpc-natgw-02"
            },
            "tags_all": {
              "Name": "aft-vpc-natgw-02",
              "managed_by": "AFT"
            }
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aft_vpc_private_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:route-table/rtb-09dfd5017a60cb0e0",
            "id": "rtb-09dfd5017a60cb0e0",
            "owner_id": "831569350010",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01641fb40e6fc2ff3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aft-vpc-private-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-01",
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aft_vpc_private_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:route-table/rtb-0cd1d8492865ebb22",
            "id": "rtb-0cd1d8492865ebb22",
            "owner_id": "831569350010",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05ab4e935ebebc8b6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aft-vpc-private-subnet-02"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-02",
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aft_vpc_public_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:route-table/rtb-077ab0be6f7c41608",
            "id": "rtb-077ab0be6f7c41608",
            "owner_id": "831569350010",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f71d73a78ae48d9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aft-vpc-public-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-public-subnet-01",
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_private_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e52370ee97f385c",
            "route_table_id": "rtb-09dfd5017a60cb0e0",
            "subnet_id": "subnet-003c841febb2163f5"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_private_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf1786b5e7d043e6",
            "route_table_id": "rtb-0cd1d8492865ebb22",
            "subnet_id": "subnet-0970ebe4f59507674"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_public_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fecbdc1abd76c37d",
            "route_table_id": "rtb-077ab0be6f7c41608",
            "subnet_id": "subnet-09ad9123c874f2007"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_public_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4784edca0c88499",
            "route_table_id": "rtb-077ab0be6f7c41608",
            "subnet_id": "subnet-01ce66e9a82e30592"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aft_vpc_default_sg",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:security-group/sg-0a4310c8034e66ff9",
            "description": "Allow outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4310c8034e66ff9",
            "ingress": [],
            "name": "aft-default-sg",
            "name_prefix": "",
            "owner_id": "831569350010",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aft_vpc_endpoint_sg",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:security-group/sg-0edee7d858e8ebee4",
            "description": "Allow inbound HTTPS traffic and all Outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0edee7d858e8ebee4",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/22"
                ],
                "description": "Allow inbound SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/22"
                ],
                "description": "Allow inbound TLS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "aft-endpoint-sg",
            "name_prefix": "",
            "owner_id": "831569350010",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_private_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:subnet/subnet-003c841febb2163f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003c841febb2163f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831569350010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aft-vpc-private-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-01",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_private_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:subnet/subnet-0970ebe4f59507674",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0970ebe4f59507674",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831569350010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aft-vpc-private-subnet-02"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-02",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_public_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:subnet/subnet-09ad9123c874f2007",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ad9123c874f2007",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831569350010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aft-vpc-public-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-public-subnet-01",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_public_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:subnet/subnet-01ce66e9a82e30592",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ce66e9a82e30592",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831569350010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aft-vpc-public-subnet-02"
            },
            "tags_all": {
              "Name": "aft-vpc-public-subnet-02",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aft_vpc",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:vpc/vpc-06cdd138eab207cc9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/22",
            "default_network_acl_id": "acl-0b2fdf394ff64a095",
            "default_route_table_id": "rtb-09f7602f80fde4f76",
            "default_security_group_id": "sg-00fc8438005eb19d1",
            "dhcp_options_id": "dopt-0b7685d22027d6b0e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06cdd138eab207cc9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09f7602f80fde4f76",
            "owner_id": "831569350010",
            "tags": {
              "Name": "aft-management-vpc"
            },
            "tags_all": {
              "Name": "aft-management-vpc",
              "managed_by": "AFT"
            }
          },
          "dependencies": [
            "module.aft.data.aws_partition.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:vpc-endpoint/vpce-00ddee917507fc2d4",
            "dns_entry": [
              {
                "dns_name": "vpce-00ddee917507fc2d4-xvldi31u.codebuild.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00ddee917507fc2d4-xvldi31u-us-east-1a.codebuild.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00ddee917507fc2d4-xvldi31u-us-east-1b.codebuild.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "codebuild.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z10436041GAFS69EX0W4B"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-00ddee917507fc2d4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-001904a180a400e61",
              "eni-03a3b635b1cfb782b"
            ],
            "owner_id": "831569350010",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0edee7d858e8ebee4"
            ],
            "service_name": "com.amazonaws.us-east-1.codebuild",
            "state": "available",
            "subnet_ids": [
              "subnet-003c841febb2163f5",
              "subnet-0970ebe4f59507674"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.codebuild",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.codebuild"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:vpc-endpoint/vpce-0e4eab66f5e1c26ee",
            "dns_entry": [
              {
                "dns_name": "vpce-0e4eab66f5e1c26ee-bzpnwujf.codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e4eab66f5e1c26ee-bzpnwujf-us-east-1b.codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e4eab66f5e1c26ee-bzpnwujf-us-east-1a.codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "codecommit.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06762883NLMVYRL5F97K"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0e4eab66f5e1c26ee",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0390992162e1f5ab9",
              "eni-09c97ee7f323afbde"
            ],
            "owner_id": "831569350010",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0edee7d858e8ebee4"
            ],
            "service_name": "com.amazonaws.us-east-1.codecommit",
            "state": "available",
            "subnet_ids": [
              "subnet-003c841febb2163f5",
              "subnet-0970ebe4f59507674"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.codecommit",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.codecommit"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codepipeline",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:vpc-endpoint/vpce-01d012fce267e3d2c",
            "dns_entry": [
              {
                "dns_name": "vpce-01d012fce267e3d2c-nympsjta.codepipeline.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01d012fce267e3d2c-nympsjta-us-east-1b.codepipeline.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01d012fce267e3d2c-nympsjta-us-east-1a.codepipeline.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "codepipeline.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05548232QYYABME1P92A"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-01d012fce267e3d2c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06ce43c56d8079b0e",
              "eni-0cef4e80482cf92b2"
            ],
            "owner_id": "831569350010",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0edee7d858e8ebee4"
            ],
            "service_name": "com.amazonaws.us-east-1.codepipeline",
            "state": "available",
            "subnet_ids": [
              "subnet-003c841febb2163f5",
              "subnet-0970ebe4f59507674"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.codepipeline",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.codepipeline"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:vpc-endpoint/vpce-0716c60334c1146f3",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "id": "vpce-0716c60334c1146f3",
            "owner_id": "831569350010",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-077ab0be6f7c41608",
              "rtb-09dfd5017a60cb0e0",
              "rtb-0cd1d8492865ebb22"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "state": "available",
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_region.aft-management"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:vpc-endpoint/vpce-053f328568d3c88dc",
            "dns_entry": [
              {
                "dns_name": "vpce-053f328568d3c88dc-xez7rcr4.events.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-053f328568d3c88dc-xez7rcr4-us-east-1b.events.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-053f328568d3c88dc-xez7rcr4-us-east-1a.events.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "events.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05560163D8J1L2R04UIH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-053f328568d3c88dc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0bc5e182963523200",
              "eni-0d4137b7c30c3580e"
            ],
            "owner_id": "831569350010",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0edee7d858e8ebee4"
            ],
            "service_name": "com.amazonaws.us-east-1.events",
            "state": "available",
            "subnet_ids": [
              "subnet-003c841febb2163f5",
              "subnet-0970ebe4f59507674"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.events",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.events"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git-codecommit",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:vpc-endpoint/vpce-0ce437859deb31344",
            "dns_entry": [
              {
                "dns_name": "vpce-0ce437859deb31344-ax9ia3eq.git-codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ce437859deb31344-ax9ia3eq-us-east-1b.git-codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ce437859deb31344-ax9ia3eq-us-east-1a.git-codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "git-codecommit.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z055664412GTT332ZI5BE"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0ce437859deb31344",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05fce729d1d821728",
              "eni-06c4517178064a7cc"
            ],
            "owner_id": "831569350010",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0edee7d858e8ebee4"
            ],
            "service_name": "com.amazonaws.us-east-1.git-codecommit",
            "state": "available",
            "subnet_ids": [
              "subnet-003c841febb2163f5",
              "subnet-0970ebe4f59507674"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.git-codecommit",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.git-codecommit"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:vpc-endpoint/vpce-09514d7831f3d18bf",
            "dns_entry": [
              {
                "dns_name": "vpce-09514d7831f3d18bf-66tkuz90.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-09514d7831f3d18bf-66tkuz90-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-09514d7831f3d18bf-66tkuz90-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z006586515JOPYSF2TTIP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-09514d7831f3d18bf",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-001e7b75129dec3b1",
              "eni-00b3575196b1e1e40"
            ],
            "owner_id": "831569350010",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0edee7d858e8ebee4"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "state": "available",
            "subnet_ids": [
              "subnet-003c841febb2163f5",
              "subnet-0970ebe4f59507674"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.kms",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.kms"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "lambda",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:vpc-endpoint/vpce-06d87fbfb99d0ebb6",
            "dns_entry": [
              {
                "dns_name": "vpce-06d87fbfb99d0ebb6-v96abu61.lambda.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06d87fbfb99d0ebb6-v96abu61-us-east-1a.lambda.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06d87fbfb99d0ebb6-v96abu61-us-east-1b.lambda.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "lambda.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06758811R9VB7OSMRS0Y"
              },
              {
                "dns_name": "lambda.us-east-1.api.aws",
                "hosted_zone_id": "Z0073577U4M3YB0ZWA09"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-06d87fbfb99d0ebb6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-029b49ec88702258a",
              "eni-0ffba172fda24c265"
            ],
            "owner_id": "831569350010",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0edee7d858e8ebee4"
            ],
            "service_name": "com.amazonaws.us-east-1.lambda",
            "state": "available",
            "subnet_ids": [
              "subnet-003c841febb2163f5",
              "subnet-0970ebe4f59507674"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.lambda",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.lambda"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:vpc-endpoint/vpce-03cb27f8929221ea9",
            "dns_entry": [
              {
                "dns_name": "vpce-03cb27f8929221ea9-6goy228a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03cb27f8929221ea9-6goy228a-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03cb27f8929221ea9-6goy228a-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z1043103297KAWVOP701C"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-03cb27f8929221ea9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03665110add1a7762",
              "eni-0e53e8bc866b420bb"
            ],
            "owner_id": "831569350010",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0edee7d858e8ebee4"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-003c841febb2163f5",
              "subnet-0970ebe4f59507674"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.logs",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.logs"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:vpc-endpoint/vpce-028ec5cbad26ee2e6",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-028ec5cbad26ee2e6",
            "owner_id": "831569350010",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-077ab0be6f7c41608",
              "rtb-09dfd5017a60cb0e0",
              "rtb-0cd1d8492865ebb22"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_region.aft-management"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "servicecatalog",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:vpc-endpoint/vpce-086764a56be49ec31",
            "dns_entry": [
              {
                "dns_name": "vpce-086764a56be49ec31-arjbhvog.servicecatalog.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-086764a56be49ec31-arjbhvog-us-east-1a.servicecatalog.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-086764a56be49ec31-arjbhvog-us-east-1b.servicecatalog.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "servicecatalog.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06767781LXZSWPICC8SE"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-086764a56be49ec31",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08baf872f2447c874",
              "eni-0ff48a42c92303b9a"
            ],
            "owner_id": "831569350010",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0edee7d858e8ebee4"
            ],
            "service_name": "com.amazonaws.us-east-1.servicecatalog",
            "state": "available",
            "subnet_ids": [
              "subnet-003c841febb2163f5",
              "subnet-0970ebe4f59507674"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.servicecatalog",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.servicecatalog"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:vpc-endpoint/vpce-0e77d13c2d8c401a5",
            "dns_entry": [
              {
                "dns_name": "vpce-0e77d13c2d8c401a5-m1zarxcb.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e77d13c2d8c401a5-m1zarxcb-us-east-1a.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e77d13c2d8c401a5-m1zarxcb-us-east-1b.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sns.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07001963OG0RU0LZRNSM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0e77d13c2d8c401a5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-008a05ebd535b462b",
              "eni-03427b8335c42d3b3"
            ],
            "owner_id": "831569350010",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0edee7d858e8ebee4"
            ],
            "service_name": "com.amazonaws.us-east-1.sns",
            "state": "available",
            "subnet_ids": [
              "subnet-003c841febb2163f5",
              "subnet-0970ebe4f59507674"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.sns",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.sns"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:vpc-endpoint/vpce-017402d361effa795",
            "dns_entry": [
              {
                "dns_name": "vpce-017402d361effa795-qwp728z5.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-017402d361effa795-qwp728z5-us-east-1b.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-017402d361effa795-qwp728z5-us-east-1a.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sqs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0699163EW4I4TFQ7UVY"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-017402d361effa795",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08d039fb1b76bf410",
              "eni-0eedc5194b7225352"
            ],
            "owner_id": "831569350010",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0edee7d858e8ebee4"
            ],
            "service_name": "com.amazonaws.us-east-1.sqs",
            "state": "available",
            "subnet_ids": [
              "subnet-003c841febb2163f5",
              "subnet-0970ebe4f59507674"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.sqs",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.sqs"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:vpc-endpoint/vpce-02f8e1b7785afaa77",
            "dns_entry": [
              {
                "dns_name": "vpce-02f8e1b7785afaa77-rbsak3zh.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02f8e1b7785afaa77-rbsak3zh-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02f8e1b7785afaa77-rbsak3zh-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06998802RZNJN3TLM2VN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-02f8e1b7785afaa77",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03b5d83550214296a",
              "eni-0a284e6a0a99d6e66"
            ],
            "owner_id": "831569350010",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0edee7d858e8ebee4"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-003c841febb2163f5",
              "subnet-0970ebe4f59507674"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.ssm",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.ssm"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "states",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:vpc-endpoint/vpce-08e922f109a12445a",
            "dns_entry": [
              {
                "dns_name": "vpce-08e922f109a12445a-7upi9ho5.states.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08e922f109a12445a-7upi9ho5-us-east-1a.states.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08e922f109a12445a-7upi9ho5-us-east-1b.states.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "states.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z10430452L5F7CC20R4AQ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-08e922f109a12445a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0c81640e5f37fdb1c",
              "eni-0f5404565a0e3105e"
            ],
            "owner_id": "831569350010",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0edee7d858e8ebee4"
            ],
            "service_name": "com.amazonaws.us-east-1.states",
            "state": "available",
            "subnet_ids": [
              "subnet-003c841febb2163f5",
              "subnet-0970ebe4f59507674"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.states",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.states"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831569350010:vpc-endpoint/vpce-0830e181ece2be311",
            "dns_entry": [
              {
                "dns_name": "vpce-0830e181ece2be311-nh07k2jj.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0830e181ece2be311-nh07k2jj-us-east-1a.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0830e181ece2be311-nh07k2jj-us-east-1b.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sts.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06765893SSHX3PN384A9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0830e181ece2be311",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08b068287c802015c",
              "eni-0cde577d96c8cd045"
            ],
            "owner_id": "831569350010",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0edee7d858e8ebee4"
            ],
            "service_name": "com.amazonaws.us-east-1.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-003c841febb2163f5",
              "subnet-0970ebe4f59507674"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06cdd138eab207cc9"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.sts",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.sts"
          ]
        }
      ]
    }
  ]
}